css changes, update views

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -92,6 +92,10 @@ button.list-control {
     align-items: center;
 }
 
+.item input {
+    width: 100%;
+}
+
 .item-name {
     display: flex;
     align-items: center;
